# aiformula_pilot

./: .gitignore  .gitmodules  README.md
.github/: pull_request_template.md
docker/: aiformula_foxy_amd.dockerfile  docker_run_aiformula_foxy_amd.sh
documents/: system_architecture.drawio
launchers/sample_launchers/: CMakeLists.txt
launchers/sample_launchers/launch/: all_pilot_nodes.launch.py  handle_controller_joy.launch.py
remote_control/gui_webserver/: CMakeLists.txt  README.md  package.xml
remote_control/gui_webserver/launch/: gui_webserver.launch.py  rosbridge_websocket.launch.py
remote_control/gui_webserver/shellscripts/: start_ros_server.sh
remote_control/gui_webserver/webpages/: index.html
remote_control/gui_webserver/webpages/config/: settings.json
remote_control/gui_webserver/webpages/css/: index.css
remote_control/gui_webserver/webpages/js/: rostopic-viewer.js  timer-viewer.js
remote_control/gui_webserver/webpages/json/: session.json
remote_control/teleop_twist_handle_controller/launch/: handle_controller_teleop.launch.py
remote_control/teleop_twist_handle_controller/teleop_twist_handle_controller/: teleop_twist_handle_controller.py
shellscripts/: install.sh
